--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NZWalksConnectionString": "Server=localhost;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "xQhnzwvM13LhsZtoAIBtvFmRt8voJaQO",
+    "Issuer": "http://localhost:5194/",
+    "Audience": "http://localhost:5194/"
   }
 }
